--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,1 +1,6 @@
 <h1>This the the ask page</h1>
+
+<form action="???">
+  <input type="text" name="answer">
+  <input type="submit" value="Ask!">
+</form>
