--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,11 +1,4 @@
-<h1>This is the answers page</h1>
-<%= params[:answer] %>
+<h1>Stupid Coaching</h1>
 
 
-<% if params[:answer] == "I am going to work" %>
-  <%= puts "Great!" %>
-<% elsif params[:answer][-1] == "?" %>
-  <%= puts "Silly question, get dressed and go to work!" %>
-<% else %>
-  <%= puts "I don't care, get dressed and go to work!" %>
-<% end %>
+<%= link_to "Ask a new question", ask_path %>
