--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,6 +1,6 @@
 <h1>This the the ask page</h1>
 
-<form action="answer">
+<form action="\answer">
   <input type="text" name="answer">
   <input type="submit" value="Ask!">
 </form>
